--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 Requires: depthsense sdk, python2, simplecv
-Make sure to add the softkinect.conf file to your /etc/ld.conf.d/ folder for linking
+Make sure to add the docs/softkinect.conf file to your /etc/ld.conf.d/ folder for linking
 
 Looks for sdk in /opt/softkinect folder. You can get the SDK from softkinect sites
-
 
 If everythings inorder, install with the following command:
 	sudo python2 setup.py install
